<resources>
  <string name="app_name">UITask</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="action_search">Search</string>
  <string name="name">Channing Tatum</string>
  <string name="location">California, United States</string>
  <string name="linearLayoutManager">LinearLayoutManager</string>
  <string name="feed">Feed</string>
  <string name="share">Share</string>
  <string name="music">Music</string>
  <string name="chat">Chat</string>
  <string name="gallery">Gallery</string>
  <string name="location1">Location</string>
  <string name="friends">Friends</string>
  <string name="notification">Notifications</string>
  <string name="address1">San Franscisco, CA</string>
  <string name="profile">Profile</string>
  <string name="follow">Follow</string>
  <string name="address2">Los Angeles, USA</string>
  <string name="name2">Brandon Heath</string>
  <string name="write">Write</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="popular">Popular</string>
  <string name="categories">Categories</string>
  <string name="name1">Johnny Depp</string>
  <string name="location3">Prague, Czeck Republic</string>
  <string name="stories">Stories</string>
  <string name="followers">Followers</string>
  <string name="following">Following</string>
  <string name="avatar">avatar</string>
  <string name="message">Messages</string>
  <string name="photo">Photo</string>
</resources>
