<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/message_icon"
        android:title="@string/message"/>
    <item
        android:id="@+id/nav_photo"
        android:icon="@drawable/photo_icon"
        android:title="@string/photo"/>
    <item
        android:id="@+id/nav_friend"
        android:icon="@drawable/person_icon"
        android:title="Friends"/>
    <item
        android:id="@+id/nav_music"
        android:icon="@drawable/music_icon"
        android:title="Music"/>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/notification_icon"
        android:title="Notification"/>
  </group>
  <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/settings_icon"
      android:title="@string/action_settings"/>
</menu>
