<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gmail.csahu42.uitask.ui.activity.ProfileMusicActivity">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorWhite">
    <include
        android:id="@+id/app_bar_layout"
        layout="@layout/app_bar"/>
    <com.gmail.csahu42.uitask.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/myphoto"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/avatar"
        android:text="@string/name2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/avatar"
        android:text="@string/address2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black_overlay"/>
    <Button
        android:id="@+id/btnFollow"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_below="@id/location"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/avatar"
        android:background="@drawable/button_selector"
        android:padding="8dp"
        android:text="@string/follow"
        android:textColor="@color/button_text_color_states"
        style="@style/TextAppearance.AppCompat.Button"/>
    <Button
        android:id="@+id/btnWrite"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_below="@id/location"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/btnFollow"
        android:background="@android:color/darker_gray"
        android:padding="8dp"
        android:text="@string/write"
        android:textColor="@color/button_text_color_states"
        style="@style/TextAppearance.AppCompat.Button"/>
    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/btnFollow"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorTransparent"
        app:tabMode="fixed"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
  </RelativeLayout>
</layout>
